seperated login service - Yuvraj Karekar